test_scripts/errors/while_condition_error.shm
while undefined_var { 1; }
