test_scripts/errors/while_condition_error.stderr
 1 | while undefined_var { 1; }
           ^^^^^^^^^^^^^
Error: Unknown identifier "undefined_var"
